# lab8

./: pyproject.toml
.github/: CODEOWNERS
.github/workflows/: lab-assistant.yml
src/adventure/: story.py
tests/: test_bold_prompt.py  test_story.py
