[project]
name = "lab8-github-flow"
version = "0.1.0"
description = ""
authors = [
    {name = "teststudentcosc381",email = "144061513+teststudentcosc381@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "lab8_github_flow", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
